[gd_scene load_steps=8 format=3 uid="uid://blstwc0h17b4s"]

[ext_resource type="Script" path="res://main.gd" id="1_xfds2"]
[ext_resource type="Theme" uid="uid://c6omcieavcvv1" path="res://theme.tres" id="1_xt76k"]
[ext_resource type="AudioStream" uid="uid://c23mpek3skf1p" path="res://wait_music.mp3" id="3_soqwp"]
[ext_resource type="Texture2D" uid="uid://cw7uccj1kaut" path="res://KULEUVEN_BRUGGE_RGB_LOGO.png" id="4_j553g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vanpu"]
bg_color = Color(0.0705882, 0.509804, 0.6, 1)

[sub_resource type="GDScript" id="GDScript_uny1u"]
script/source = "extends VBoxContainer


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	if not Input.get_last_mouse_velocity().is_zero_approx():
		$Label3.visible = true
		$HBoxContainer.visible = true
		$HBoxContainer2.visible = true
		$Timer2.start()


func _on_timer_2_timeout() -> void:
	$Label3.visible = false
	$HBoxContainer.visible = false
	$HBoxContainer2.visible = false
	
"

[sub_resource type="LabelSettings" id="LabelSettings_hyg5q"]
font_size = 180

[node name="Main" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xt76k")
theme_override_styles/panel = SubResource("StyleBoxFlat_vanpu")
script = ExtResource("1_xfds2")

[node name="BeepAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_soqwp")

[node name="Timer" type="Timer" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 19.0
offset_top = 20.0
offset_right = 247.026
offset_bottom = 85.0
texture = ExtResource("4_j553g")
expand_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1
script = SubResource("GDScript_uny1u")

[node name="TimeDisplay" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "00:00:00"
label_settings = SubResource("LabelSettings_hyg5q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Timer instellingen:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HourSpinBox" type="SpinBox" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
max_value = 23.0
alignment = 1
suffix = "u"

[node name="MinuteSpinBox" type="SpinBox" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
max_value = 59.0
alignment = 1
suffix = "m"

[node name="SecondSpinBox" type="SpinBox" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
max_value = 59.0
alignment = 1
suffix = "s"

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Start"
flat = true

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
text = "Hervat"
flat = true

[node name="StopButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
text = "Stop"
flat = true

[node name="RepeatCheckbox" type="CheckBox" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Herhaal"

[node name="Timer2" type="Timer" parent="CenterContainer/VBoxContainer"]
wait_time = 3.0
autostart = true

[connection signal="finished" from="BeepAudio" to="." method="_on_beep_audio_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/HourSpinBox" to="." method="_on_configure_time_change"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/MinuteSpinBox" to="." method="_on_configure_time_change"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/SecondSpinBox" to="." method="_on_configure_time_change"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer2/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer2/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer2/StopButton" to="." method="_on_stop_button_pressed"]
[connection signal="timeout" from="CenterContainer/VBoxContainer/Timer2" to="CenterContainer/VBoxContainer" method="_on_timer_2_timeout"]
